PARTE3/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_INTEIRO
   10     | T_LOGICO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 lista_comandos: lista_comandos comando
   14               | ε

   15 comando: leitura
   16        | escrita
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 leitura: T_LEIA T_IDENTIF

   21 escrita: T_ESCREVA expressao

   22 $@3: ε

   23 $@4: ε

   24 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

   25 $@5: ε

   26 $@6: ε

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   28 $@7: ε

   29 atribuicao: T_IDENTIF $@7 T_ATRIB expressao

   30 expressao: expressao T_MAIS expressao
   31          | expressao T_MENOS expressao
   32          | expressao T_VEZES expressao
   33          | expressao T_DIV expressao
   34          | expressao T_MAIOR expressao
   35          | expressao T_MENOR expressao
   36          | expressao T_IGUAL expressao
   37          | expressao T_E expressao
   38          | expressao T_OU expressao
   39          | termo

   40 termo: T_NUMERO
   41      | T_IDENTIF
   42      | T_V
   43      | T_F
   44      | T_NAO termo
   45      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIMPROG (260) 3
    T_LEIA (261) 20
    T_ESCREVA (262) 21
    T_SE (263) 27
    T_ENTAO (264) 27
    T_SENAO (265) 27
    T_FIMSE (266) 27
    T_ENQUANTO (267) 24
    T_FACA (268) 24
    T_FIMENQTO (269) 24
    T_MAIS (270) 30
    T_MENOS (271) 31
    T_VEZES (272) 32
    T_DIV (273) 33
    T_MAIOR (274) 34
    T_MENOR (275) 35
    T_IGUAL (276) 36
    T_E (277) 37
    T_OU (278) 38
    T_NAO (279) 44
    T_ATRIB (280) 29
    T_ABRE (281) 45
    T_FECHA (282) 45
    T_INTEIRO (283) 9
    T_LOGICO (284) 10
    T_V (285) 42
    T_F (286) 43
    T_IDENTIF (287) 4 11 12 20 29 41
    T_NUMERO (288) 40


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 3
        on right: 0
    $@1 (36)
        on left: 1
        on right: 3
    $@2 (37)
        on left: 2
        on right: 3
    cabecalho (38)
        on left: 4
        on right: 3
    variaveis (39)
        on left: 5 6
        on right: 3
    declaracao_variaveis (40)
        on left: 7 8
        on right: 6 7
    tipo (41)
        on left: 9 10
        on right: 7 8
    lista_variaveis (42)
        on left: 11 12
        on right: 7 8 11
    lista_comandos (43)
        on left: 13 14
        on right: 3 13 24 27
    comando (44)
        on left: 15 16 17 18 19
        on right: 13
    leitura (45)
        on left: 20
        on right: 15
    escrita (46)
        on left: 21
        on right: 16
    repeticao (47)
        on left: 24
        on right: 17
    $@3 (48)
        on left: 22
        on right: 24
    $@4 (49)
        on left: 23
        on right: 24
    selecao (50)
        on left: 27
        on right: 18
    $@5 (51)
        on left: 25
        on right: 27
    $@6 (52)
        on left: 26
        on right: 27
    atribuicao (53)
        on left: 29
        on right: 19
    $@7 (54)
        on left: 28
        on right: 29
    expressao (55)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 21 24 27 29 30 31 32 33 34 35 36 37 38 45
    termo (56)
        on left: 40 41 42 43 44 45
        on right: 39 44


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_INTEIRO •

    $default  reduce using rule 9 (tipo)


State 8

   10 tipo: T_LOGICO •

    $default  reduce using rule 10 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIMPROG

    T_INICIO  shift, and go to state 15


State 13

   12 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 12 (lista_variaveis)


State 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   11 lista_variaveis: lista_variaveis • T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 16

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 11


State 15

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIMPROG

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 18


State 16

   11 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 11 (lista_variaveis)


State 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 18

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIMPROG
   13 lista_comandos: lista_comandos • comando

    T_FIMPROG   shift, and go to state 19
    T_LEIA      shift, and go to state 20
    T_ESCREVA   shift, and go to state 21
    T_SE        shift, and go to state 22
    T_ENQUANTO  shift, and go to state 23
    T_IDENTIF   shift, and go to state 24

    comando     go to state 25
    leitura     go to state 26
    escrita     go to state 27
    repeticao   go to state 28
    selecao     go to state 29
    atribuicao  go to state 30


State 19

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG •

    $default  reduce using rule 3 (programa)


State 20

   20 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 31


State 21

   21 escrita: T_ESCREVA • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 38
    termo      go to state 39


State 22

   27 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 40
    termo      go to state 39


State 23

   24 repeticao: T_ENQUANTO • $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 22 ($@3)

    $@3  go to state 41


State 24

   29 atribuicao: T_IDENTIF • $@7 T_ATRIB expressao

    $default  reduce using rule 28 ($@7)

    $@7  go to state 42


State 25

   13 lista_comandos: lista_comandos comando •

    $default  reduce using rule 13 (lista_comandos)


State 26

   15 comando: leitura •

    $default  reduce using rule 15 (comando)


State 27

   16 comando: escrita •

    $default  reduce using rule 16 (comando)


State 28

   17 comando: repeticao •

    $default  reduce using rule 17 (comando)


State 29

   18 comando: selecao •

    $default  reduce using rule 18 (comando)


State 30

   19 comando: atribuicao •

    $default  reduce using rule 19 (comando)


State 31

   20 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 20 (leitura)


State 32

   44 termo: T_NAO • termo

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    termo  go to state 43


State 33

   45 termo: T_ABRE • expressao T_FECHA

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 44
    termo      go to state 39


State 34

   42 termo: T_V •

    $default  reduce using rule 42 (termo)


State 35

   43 termo: T_F •

    $default  reduce using rule 43 (termo)


State 36

   41 termo: T_IDENTIF •

    $default  reduce using rule 41 (termo)


State 37

   40 termo: T_NUMERO •

    $default  reduce using rule 40 (termo)


State 38

   21 escrita: T_ESCREVA expressao •
   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 21 (escrita)


State 39

   39 expressao: termo •

    $default  reduce using rule 39 (expressao)


State 40

   27 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 54
    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53


State 41

   24 repeticao: T_ENQUANTO $@3 • expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 55
    termo      go to state 39


State 42

   29 atribuicao: T_IDENTIF $@7 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 56


State 43

   44 termo: T_NAO termo •

    $default  reduce using rule 44 (termo)


State 44

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   45 termo: T_ABRE expressao • T_FECHA

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53
    T_FECHA  shift, and go to state 57


State 45

   30 expressao: expressao T_MAIS • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 58
    termo      go to state 39


State 46

   31 expressao: expressao T_MENOS • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 59
    termo      go to state 39


State 47

   32 expressao: expressao T_VEZES • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 60
    termo      go to state 39


State 48

   33 expressao: expressao T_DIV • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 61
    termo      go to state 39


State 49

   34 expressao: expressao T_MAIOR • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 62
    termo      go to state 39


State 50

   35 expressao: expressao T_MENOR • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 63
    termo      go to state 39


State 51

   36 expressao: expressao T_IGUAL • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 64
    termo      go to state 39


State 52

   37 expressao: expressao T_E • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 65
    termo      go to state 39


State 53

   38 expressao: expressao T_OU • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 66
    termo      go to state 39


State 54

   27 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 25 ($@5)

    $@5  go to state 67


State 55

   24 repeticao: T_ENQUANTO $@3 expressao • T_FACA $@4 lista_comandos T_FIMENQTO
   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_FACA   shift, and go to state 68
    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53


State 56

   29 atribuicao: T_IDENTIF $@7 T_ATRIB • expressao

    T_NAO      shift, and go to state 32
    T_ABRE     shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_IDENTIF  shift, and go to state 36
    T_NUMERO   shift, and go to state 37

    expressao  go to state 69
    termo      go to state 39


State 57

   45 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 45 (termo)


State 58

   30 expressao: expressao • T_MAIS expressao
   30          | expressao T_MAIS expressao •
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 30 (expressao)


State 59

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   31          | expressao T_MENOS expressao •
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 31 (expressao)


State 60

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   32          | expressao T_VEZES expressao •
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 32 (expressao)


State 61

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   33          | expressao T_DIV expressao •
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 33 (expressao)


State 62

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   34          | expressao T_MAIOR expressao •
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_E   shift, and go to state 52
    T_OU  shift, and go to state 53

    $default  reduce using rule 34 (expressao)


State 63

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   35          | expressao T_MENOR expressao •
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_E   shift, and go to state 52
    T_OU  shift, and go to state 53

    $default  reduce using rule 35 (expressao)


State 64

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   36          | expressao T_IGUAL expressao •
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_E   shift, and go to state 52
    T_OU  shift, and go to state 53

    $default  reduce using rule 36 (expressao)


State 65

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   37          | expressao T_E expressao •
   38          | expressao • T_OU expressao

    $default  reduce using rule 37 (expressao)


State 66

   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   38          | expressao T_OU expressao •

    $default  reduce using rule 38 (expressao)


State 67

   27 selecao: T_SE expressao T_ENTAO $@5 • lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 70


State 68

   24 repeticao: T_ENQUANTO $@3 expressao T_FACA • $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 23 ($@4)

    $@4  go to state 71


State 69

   29 atribuicao: T_IDENTIF $@7 T_ATRIB expressao •
   30 expressao: expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 29 (atribuicao)


State 70

   13 lista_comandos: lista_comandos • comando
   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos • T_SENAO $@6 lista_comandos T_FIMSE

    T_LEIA      shift, and go to state 20
    T_ESCREVA   shift, and go to state 21
    T_SE        shift, and go to state 22
    T_SENAO     shift, and go to state 72
    T_ENQUANTO  shift, and go to state 23
    T_IDENTIF   shift, and go to state 24

    comando     go to state 25
    leitura     go to state 26
    escrita     go to state 27
    repeticao   go to state 28
    selecao     go to state 29
    atribuicao  go to state 30


State 71

   24 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 • lista_comandos T_FIMENQTO

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 73


State 72

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO • $@6 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@6)

    $@6  go to state 74


State 73

   13 lista_comandos: lista_comandos • comando
   24 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 lista_comandos • T_FIMENQTO

    T_LEIA      shift, and go to state 20
    T_ESCREVA   shift, and go to state 21
    T_SE        shift, and go to state 22
    T_ENQUANTO  shift, and go to state 23
    T_FIMENQTO  shift, and go to state 75
    T_IDENTIF   shift, and go to state 24

    comando     go to state 25
    leitura     go to state 26
    escrita     go to state 27
    repeticao   go to state 28
    selecao     go to state 29
    atribuicao  go to state 30


State 74

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 • lista_comandos T_FIMSE

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 76


State 75

   24 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO •

    $default  reduce using rule 24 (repeticao)


State 76

   13 lista_comandos: lista_comandos • comando
   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos • T_FIMSE

    T_LEIA      shift, and go to state 20
    T_ESCREVA   shift, and go to state 21
    T_SE        shift, and go to state 22
    T_FIMSE     shift, and go to state 77
    T_ENQUANTO  shift, and go to state 23
    T_IDENTIF   shift, and go to state 24

    comando     go to state 25
    leitura     go to state 26
    escrita     go to state 27
    repeticao   go to state 28
    selecao     go to state 29
    atribuicao  go to state 30


State 77

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE •

    $default  reduce using rule 27 (selecao)
